# shp_to_geojson_to_babylon

./: README.md  package-lock.json  package.json
backend/: README.md  main.py  pyproject.toml  shp_to_vertices.spec  test.geojson
backend/files/: A1_NODE.dbf  A1_NODE.shp  A1_NODE.shx  A2_LINK.shp  A4_SUBSIDIARYSECTION.dbf  A5_PARKINGLOT.dbf  B1_SAFETYSIGN.dbf  B2_SURFACELINEMARK.shx  B3_SURFACEMARK.shx  C3_VEHICLEPROTECTIONSAFETY.dbf  C3_VEHICLEPROTECTIONSAFETY.shp  C3_VEHICLEPROTECTIONSAFETY.shx  C6_POSTPOINT.dbf  C6_POSTPOINT.shp
frontend/: package-lock.json  package.json
frontend/public/: test.geojson  unedited.geojson
frontend/src/: App.css  App.tsx  data.ts  store.ts  temp.tsx
frontend/src/BabylonScene/: bablyonScene.tsx  index.css
frontend/src/BabylonScene/CanvasElement/: CanvasElement.tsx
frontend/src/BabylonScene/geojson_to_polygon/: Polygon.tsx  mesh_functions.ts
frontend/src/FilePicker/: FilePicker.tsx  index.css
go/: convert_to_lat.go  go.mod  go.sum  main  main.go  temp.go
go/files/: A2_LINK.dbf  A4_SUBSIDIARYSECTION.shp  B3_SURFACEMARK.dbf  C1_TRAFFICLIGHT.dbf
go/shp_to_json/: convert.go
go/tmp/: main
python_convert/: pyproject.toml  temp.py
python_convert/files/: A2_LINK.shx  A3_DRIVEWAYSECTION.dbf  A4_SUBSIDIARYSECTION.shx  B2_SURFACELINEMARK.dbf  C1_TRAFFICLIGHT.shx  C2_KILOPOST.dbf  C5_HEIGHTBARRIER.dbf  C6_POSTPOINT.shx
src/: App.css  App.tsx  index.css  vite-env.d.ts
